colima/Yamls/fusion-31-istio-namespace.yaml
# Namespace Definition
apiVersion: v1
kind: Namespace
metadata:
  name: fusion
  labels:
    name: fusion
    istio-injection: enabled
