colima/Yamls/fusion-04-water-alpha-deploy.yaml
# Alpha Microservice
# Deployment / Replicaset / Pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: water-alpha-deploy
  namespace: fusion
  labels:
    app: water-alpha-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      # Matching the labels from Pod Meta Data
      # Multiple labels can be used
      app: water-alpha-pod
  minReadySeconds: 5
  strategy:
    # Re-Create / Rolling Update
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: water-alpha-pod
        version: "1.0.0"
        release: stable
        organization: Ozazo
    spec:
      containers:
      - name: water-alpha-container
        image: arafkarsh/alpha
        # Use Always ONLY for Development purpose.
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 81
        resources:
        # QoS : Burstable
        # Pod will not be launched if the Hardware 
        # resources are not available
        # To check, Run the command kubectl describe pods pod-name
          limits:
            cpu: 100m
            memory: 32Mi
          requests:
            cpu: 100m
            memory: 32Mi
