colima/Yamls/fusion-08-water-cart-deploy.yaml
# Cart Microservice
# Deployment / Replicaset / Pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: water-cart-deploy
  namespace: fusion
  labels:
    app: water-cart-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      # Matching the labels from Pod Meta Data
      # Multiple labels can be used
      app: water-cart-pod
  minReadySeconds: 5
  strategy:
    # Re-Create / Rolling Update
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: water-cart-pod
        version: "1.0.0"
        release: stable
        organization: Ozazo
    spec:
      containers:
      - name: water-cart-container
        image: arafkarsh/mock-cart-ui
        # Use Always ONLY for Development purpose.
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 92
        resources:
        # QoS : Burstable
        # Pod will not be launched if the Hardware 
        # resources are not available
        # To check, Run the command kubectl describe pods pod-name
          limits:
            cpu: 100m
            memory: 32Mi
          requests:
            cpu: 75m
            memory: 24Mi
