colima/Yamls/fusion-15-water-product-deploy-v2.yaml
# Product Microservice
# Deployment / Replicaset / Pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: water-product-deploy
  namespace: fusion
  labels:
    app: water-product-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      # Matching the labels from Pod Meta Data
      # Multiple labels can be used
      app: water-product-pod
  minReadySeconds: 5
  strategy:
    # Re-Create / Rolling Update
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: water-product-pod
        version: "2.0.0"
        release: stable
        organization: Ozazo
    spec:
      containers:
      - name: water-product-container
        image: arafkarsh/mock-product-ui:2
        # Use Always ONLY for Development purpose.
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 91
        resources:
        # QoS : Burstable
        # Pod will not be launched if the Hardware 
        # resources are not available
        # To check, Run the command kubectl describe pods pod-name
          limits:
            cpu: 50m
            memory: 24Mi
          requests:
            cpu: 50m
            memory: 16Mi
