colima/Yamls/fusion-05-water-product-service.yaml
# Product Microservice
# Service Definition
apiVersion: v1
kind: Service
metadata:
  # Service Name: Ex. Water - Product Service
  name: water-product-service
  namespace: fusion
  labels:
    app: water-product-service
spec:
  # Type Cluster IP, Load Balancer, Node Port etc.
  # Cluster IP Automatically assigned by Kubernetes
  type: ClusterIP
  ports:
  - port: 80
    # Port Exposed by the Container
    targetPort: 91
    protocol: TCP
    name: http
  selector:
    # Instance Labels
    # Ex. Water - Product Service Instances
    app: water-product-pod
    release: stable
    organization: Ozazo
