colima/Yamls/fusion-09-water-order-service.yaml
# Order Microservice
# Service Definition
apiVersion: v1
kind: Service
metadata:
  # Service Name: Ex. Water - Order Service
  name: water-order-service
  namespace: fusion
  labels:
    app: water-order-service
spec:
  # Type Cluster IP, Load Balancer, Node Port etc.
  # Cluster IP Automatically assigned by Kubernetes
  type: ClusterIP
  ports:
  - port: 80
    # Port Exposed by the Container
    targetPort: 93
    protocol: TCP
    name: http
  selector:
    # Instance Labels
    # Ex. Water - Order Service Instances
    app: water-order-pod
    release: stable
    organization: Ozazo
