colima/Yamls/fusion-32-istio-gateway.yaml
# Istio API Gateway for Routing traffic to 
# respective Microservices
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: fusion-gateway
  namespace: fusion
spec:
  selector:
    istio: ingress # IF the installation done using HELM
    #istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
