colima/Yamls/fusion-33-istio-cart-vs.yaml
# API Gateway for Routing traffic to Water Alpha Microservices
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: fusion-cart-vs
  namespace: fusion
spec:
  hosts:
  - "*"
  gateways:
  - fusion-gateway
  http:
  - match:
    # Service 2: Cart Service
    - uri:
        exact: /cart
    - uri:
        prefix: /cart/
    route:
    - destination:
        host: water-cart-service
        port:
          number: 80
