colima/Yamls/fusion-33-istio-virtual-service.yaml
# API Gateway for Routing traffic to Water Alpha Microservices
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: fusion-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - fusion-gateway
  http:
  - match:
    # Default Service: Water - Alpha Service
    - uri:
        prefix: /
    route:
    - destination:
        host: water-alpha-service
        port:
          number: 80
  - match:
    # Service 1: Product Service
    - uri:
        prefix: /product/
    route:
    - destination:
        host: water-product-service
        port:
          number: 80
  - match:
    # Service 2: Cart Service
    - uri:
        prefix: /cart/
    route:
    - destination:
        host: cart-service
        port:
          number: 80
  - match:
    # Service 3: Order Service
    - uri:
        prefix: /order/
    route:
    - destination:
        host: water-order-service
        port:
          number: 80
